Added a factor for controlling the minimum learning rate value when performing learning rate annealing

--- a/.gitignore
+++ b/.gitignore
@@ -377,4 +377,8 @@ pyrightconfig.json
 *tmpfiles
 *lol
 
+# Additional names to ignore
+runs
+videos
+
 # End of https://www.toptal.com/developers/gitignore/api/python,intellij,jupyternotebooks,test
