Refined package configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,7 @@ readme = "README.md"
 python = "^3.10"
 gymnasium = "^0.29.1"
 torch = "^2.1.2"
-stable-baselines3 = "^2.2.1"
 tensorboard = "^2.15.1"
-wandb = "^0.16.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
@@ -21,3 +19,6 @@ coverage = "^7.3.4"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+micppo = "micppo:main"
