Refactoring for being able to call the training programmatically. Still need to insert checkpoint saving

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-micppo = "micppo:main"
+micppo-train = "micppo:train"
